crates/keron-lang/tests/corpus/errors/check/multiple_mismatches.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `Int`, found `String`
  --> 1:14
  |
1 | val a: Int = "x"
  |              ^^^

error: type mismatch: expected `String`, found `Int`
  --> 3:17
  |
3 | val b: String = 2
  |                 ^

error: type mismatch: expected `Boolean`, found `Double`
  --> 5:18
  |
5 | val c: Boolean = 0.5
  |                  ^^^
